--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,5 +1,12 @@
 <ul class="list-group">
-  <li *ngFor="let category of categories" class="list-group-item">
+  <li
+    (click)="setCurrentCategory(category)"
+    routerLink="/products/category/{{category.categoryId}}"
+    *ngFor="let category of categories"
+    [class]="getCurrentCategoryClass(category)"
+  >
     {{ category.categoryName }}
   </li>
 </ul>
+
+<h5 *ngIf="currentCategory">{{ currentCategory.categoryName }} seçtiniz</h5>
