--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,5 @@
 <ul class="list-group">
+  <li (click)="setCurrentCategory" [class]="getAllCategoryClass()" routerLink="/products">Tüm Ürünler</li>
   <li
     (click)="setCurrentCategory(category)"
     routerLink="/products/category/{{category.categoryId}}"
